examples/test/testpolicy17513.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17513
  namespace: namespace72
spec:
  podSelector:
    matchLabels:
      key22: value7
      key26: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value32
      podSelector:
        matchLabels:
          key29: value14
          key37: value11
